# MLOps-2425q1-demos

./: .pre-commit-config.yaml  README.md  dvc.yaml  params.yaml  pyproject.toml
.dvc/: config
.github/: dependabot.yml
data/processed/: .gitignore  euroSAT.dvc
data/processed/iowa_dataset/: X_train.csv  X_valid.csv  y_train.csv  y_valid.csv
data/raw/: test.csv.dvc  train.csv.dvc
docs/: codecarbon-demo.md  deepchecks-demo.md  docker-demo.md  dvc-demo.md  fastapi-demo.md  git-demo.md  great-expectations-demo.md  mlflow-demo.md  project-setup.md  pytest-demo.md
docs/deployment/: 01_deploy_general.md  02_add_models.md  02_deploy_fib.md  03_deploy_aws.md  04_deploy_gcp.md  05_deploy_azure.md  06_deploy_okteto.md  FAQ.md  README.md
great_expectations/expectations/: iowa_training_suite.json
gx/: great_expectations.yml
gx/checkpoints/: iowa_training_data_checkpoint
gx/data_docs/local_site/: index.html
gx/data_docs/local_site/expectations/: iowa_training_data_validation.html
gx/data_docs/local_site/validations/iowa_training_data_validation/__none__/20241016T100815.804416Z/: iowa_dataset-iowa_processed_data.html
gx/expectations/: .ge_store_backend_id  iowa_training_data_validation.json
gx/validation_definitions/: iowa_training_data_validator
metrics/: emissions.csv  scores.json
models/: iris_LogisticRegression_model.pkl  iris_SVC_model.pkl
notebooks/: behavioral_testing.ipynb  great_expectations_demo.ipynb
src/: config.py
src/app/: api.py  schemas.py
src/features/: deepchecks_validation.py  prepare.py  validate.py
src/models/: evaluate.py  train.py  train_api_demo_models.py
tests/: test_api.py  test_models.py
tests/gx/: gx_context_configuration.py  gx_data_validation.py  gx_validate_data.py
