[tool.poetry]
name = "mlops-2425q1-demo"
version = "0.1.0"
description = "Demo project for the Machine Learning Systems in Production (MLOps) course."
authors = ["Santiago del Rey <santiago.del.rey@upc.edu>"]
readme = "README.md"
packages = [{include = "mlops-2425q1-demo"}]

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
dvc = ">3.0,<3.60"
mlflow = ">2.0,<2.17"
pandas = "<2.3"
scikit-learn = "<1.6"
python-dotenv = "<1.2"
codecarbon = "<2.8"
fastapi = "<0.120"
uvicorn = {extras = ["standard"], version = "<0.32"}
numpy = "<2"
great-expectations = "<1.0.6"
debugpy = "1.8.5"
pyyaml = "^6.0.2"
requests = "^2.32.3"
deepchecks = {version = "^0.18", extras = ["vision"]}
torchvision = "^0.19"
pydantic = "^2.9"
opencv-python = "^4.10.0.84"
tensorflow = ">2.10,<2.18.0"
tensorflow-hub = ">0.5"
python-multipart = "^0.0.9"
pillow = "^10.4.0"

[tool.poetry.group.dev.dependencies]
black = "<24.9"
isort = "<5.14"
bandit = "<1.9"
pylint = "<3.3"
pytest = "<8.4"
pytest-cov = "<5.1"
httpx = "<0.28"
deptry = "^0.18.0"
pre-commit = "^3.8.0"


[tool.coverage.run]
omit = ["src/prepare.py", "src/evaluate.py", "src/train.py", "src/train_api_demo_models.py"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
addopts = "--junitxml=out/tests-report.xml --cov=src --cov-report=html:reports/coverage"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
