[project]
name = "mlops-2425q1-demos"
version = "0.1.0"
description = "Demo project for the Machine Learning Systems in Production (MLOps) course."
authors = ["Santiago del Rey <santiago.del.rey@upc.edu>"]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "codecarbon<2.8",
    "deepchecks[vision]>=0.18.1",
    "fastapi<0.120",
    "great-expectations>1.0,<=1.2",
    "mlflow>2.0,<2.17",
    "numpy<2",
    "opencv-python>=4.10.0.84",
    "pandas<2.3",
    "pillow>=11.0.0",
    "pydantic>=2.9.2",
    "python-dotenv<1.2",
    "python-multipart>=0.0.12",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "scikit-learn<1.6",
    "tensorflow-hub>0.5",
    "tensorflow>2.10,<2.18",
    "torchvision>=0.19.1",
    "uvicorn[standard]<0.32",
]

[tool.uv]
dev-dependencies = [
    "bandit>=1.7.10",
    "deptry>=0.20.0",
    "dvc>=3.55.2",
    "httpx>=0.27.2",
    "pre-commit>=4.0.1",
    "pylint>=3.3.1",
    "pytest>=8.3.3",
    "pytest-cov>=5.0.0",
    "ruff>=0.6.9",
    "pyspark>=3.5.3",
]

[tool.ruff]
line-length = 120

[tool.coverage.run]
omit = ["src/prepare.py", "src/evaluate.py", "src/train.py", "src/train_api_demo_models.py"]

[tool.pytest.ini_options]
pythonpath = "."
testpaths = "tests"
addopts = "--cov=src --cov-report=html:reports/coverage"
